[project]
name = "nldate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dylan Louie", email = "85195096+Dylan916@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nldate = "nldate:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
